--- a/_05_ORM_JPA/baitap/product_management/src/main/webapp/WEB-INF/views/view.html
+++ b/_05_ORM_JPA/baitap/product_management/src/main/webapp/WEB-INF/views/view.html
@@ -19,8 +19,8 @@
         <td th:text="${productObj.name}"></td>
         <td th:text="${productObj.price}"></td>
         <td th:text="${productObj.producer}"></td>
-<!--        <td><a th:href="@{/delete(idDelete=${studentObj.getId()})}">Delete</a></td>-->
-<!--        <Td><a th:href="@{/edit(idEdit=${studentObj.getId()})}">Edit</a></Td>-->
+        <td><a th:href="@{/delete(idDelete=${productObj.getId()})}">Delete</a></td>
+        <Td><a th:href="@{/edit(idEdit=${productObj.getId()})}">Edit</a></Td>
         <td></td>
     </tr>
 </table>
